--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -157,6 +157,7 @@
     </Compile>
     <Compile Include="mdlBanco.vb" />
     <Compile Include="mdlControle.vb" />
+    <Compile Include="mdlEmail.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -224,6 +225,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ICONE.ICO" />
+    <None Include="imgs\TITULO.PNG" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
