--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -82,6 +82,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
   </ItemGroup>
   <ItemGroup>
+    <Import Include="BCrypt" />
+    <Import Include="BCrypt.Net" />
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System" />
     <Import Include="System.Collections" />
