Rotina impressao relatorios
- Implementacao dos rascunhos para emissao dos relatorios (apenas para inicio de testes, nao estao pegando dados da base ainda)
* Resumo de vendas
* Resumo de comissoes
* Controle fidelidade
* Reimpressao de pedido
* Pedido para cozinha

--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -160,6 +160,7 @@
     <Compile Include="mdlBanco.vb" />
     <Compile Include="mdlControle.vb" />
     <Compile Include="mdlEmail.vb" />
+    <Compile Include="mdlImpressao.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
