--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -108,6 +108,12 @@
     <Compile Include="frmComanda.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmDesconto.designer.vb">
+      <DependentUpon>frmDesconto.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmDesconto.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmEncerrarPedido.designer.vb">
       <DependentUpon>frmEncerrarPedido.vb</DependentUpon>
     </Compile>
@@ -189,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmComanda.resx">
       <DependentUpon>frmComanda.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDesconto.resx">
+      <DependentUpon>frmDesconto.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmEncerrarPedido.resx">
       <DependentUpon>frmEncerrarPedido.vb</DependentUpon>
